--- a/.github/workflow/retrain.yaml
+++ b/.github/workflow/retrain.yaml
@@ -19,9 +19,14 @@ jobs:
         run: |
           pip install mlflow scikit-learn pandas numpy
 
-      - name: Run MLflow Project
+      - name: Debug structure
         run: |
-          mlflow run MLProject
+          ls -R .
+
+      
+      #- name: Run MLflow Project
+      #  run: |
+      #    mlflow run MLProject
 
       - name: Upload MLflow artifacts
         uses: actions/upload-artifact@v4
