--- a/.github/workflows/retrain.yml
+++ b/.github/workflows/retrain.yml
@@ -15,6 +15,17 @@ jobs:
         with:
           python-version: "3.9"
 
+      - name: Set up Miniconda
+        uses: conda-incubator/setup-miniconda@v3
+        with:
+          auto-update-conda: true
+          python-version: 3.9
+          activate-environment: base
+          use-only-tar-bz2: true
+
+      - name: Verify conda
+        run: conda --version     
+
       - name: Install dependencies
         run: |
           pip install mlflow scikit-learn pandas numpy
