--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -2,7 +2,6 @@ name: CI Retrain Model
 
 on: [push]
 
-
 jobs:
   train-and-build:
     runs-on: ubuntu-latest
@@ -10,7 +9,7 @@ jobs:
     defaults:
       run:
         shell: bash -l {0}
-        
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -20,6 +19,7 @@ jobs:
         with:
           python-version: "3.9"
 
+      # Set up conda environment
       - name: Set up Miniconda
         uses: conda-incubator/setup-miniconda@v3
         with:
@@ -29,7 +29,7 @@ jobs:
       - name: Verify conda
         run: conda --version
 
-      - name: Install dependencies
+      - name: Install dependency
         run: |
           pip install mlflow scikit-learn pandas numpy
 
