fixing retrain.yaml

--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -35,13 +35,18 @@ jobs:
 
       - name: Run MLflow Project
         run: |
+          set -o pipefail
           mlflow run MLProject --env-manager=local | tee mlflow_output.txt
 
       - name: Extract MLflow RUN_ID
         run: |
-          grep -oE "run_id='[a-f0-9]+'" mlflow_output.txt | head -n 1 | cut -d"'" -f2 > run_id.txt
-          cat run_id.txt
+          grep -oE "Run \(ID: [a-f0-9-]+\)" mlflow_output.txt \
+            | head -n 1 \
+            | sed 's/Run (ID: //; s/)//' > run_id.txt
 
+          echo "Extracted RUN_ID:"
+          cat run_id.txt
+      
       - name: Upload MLflow artifacts
         uses: actions/upload-artifact@v4
         with:
