--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -34,17 +34,22 @@ jobs:
           pip install mlflow scikit-learn pandas numpy
 
       - name: Run MLflow Project
+        env:
+          MLFLOW_EXPERIMENT_NAME: ci-retrain
+          MLFLOW_TRACKING_URI: file:./mlruns
         run: |
-          set -o pipefail
-          mlflow run MLProject --env-manager=local | tee mlflow_output.txt
+          mlflow run MLProject --env-manager=local
 
-      - name: Extract MLflow RUN_ID
+      # Get the latest run ID and upload artifacts
+      - name: Get MLflow RUN_ID
         run: |
-          grep -oE "Run \(ID: [a-f0-9-]+\)" mlflow_output.txt \
-            | head -n 1 \
-            | sed 's/Run (ID: //; s/)//' > run_id.txt
+          mlflow runs list \
+            --experiment-name ci_experiment \
+            --max-results 1 \
+            --output-format csv \
+            | tail -n 1 \
+            | cut -d, -f1 > run_id.txt
 
-          echo "Extracted RUN_ID:"
           cat run_id.txt
       
       - name: Upload MLflow artifacts
