--- a/promotheous.yaml
+++ b/promotheous.yaml
@@ -3,5 +3,7 @@ global:
 
 scrape_configs:
   - job_name: "ml-inference"
+    metrics_path: /metrics
     static_configs:
-      - targets: ["inference:8000"]
+      - targets:
+          - inference:8000
