editing inference.py

--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -44,8 +44,10 @@ jobs:
 
       - name: Save latest RUN_ID
         run: |
-          mkdir -p mlruns
+          EXP_ID=$(ls mlruns | head -n 1)
+          RUN_ID=$(ls -td mlruns/$EXP_ID/* | head -n 1 | xargs basename)
           echo "$RUN_ID" > mlruns/latest_run_id.txt
+          echo "Latest RUN_ID=$RUN_ID"
 
       - name: Upload MLflow artifacts
         uses: actions/upload-artifact@v4
