--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -42,17 +42,18 @@ jobs:
         run: |
           python MLProject/modelling.py
 
-      - name: Get RUN_ID from mlruns folder
+      - name: Save latest RUN_ID
         run: |
-          RUN_ID=$(ls -td mlruns/*/* | head -n 1 | awk -F'/' '{print $(NF)}')
-          echo "RUN_ID=$RUN_ID"
-          echo "$RUN_ID" > latest_run_id.txt
-
+          EXP_ID=$(ls mlruns | head -n 1)
+          RUN_ID=$(ls -td mlruns/$EXP_ID/* | head -n 1 | xargs basename)
+          echo "$RUN_ID" > mlruns/latest_run_id.txt
+          echo "Latest RUN_ID=$RUN_ID"
+          
       - name: Upload MLflow artifacts
         uses: actions/upload-artifact@v4
         with:
           name: mlflow-artifacts
-          path: mlruns/
+          path: mlruns/ 
 
       - name: Debug Docker secrets
         run: |
