editing inference.py

--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -72,7 +72,7 @@ jobs:
       - name: Build Docker Image with MLflow
         run: |
           mlflow models build-docker \
-            --model-uri runs:/$(cat run_id.txt)/model \
+            --model-uri runs:/$(cat latest_run_id.txt)/model \
             --name ${{ secrets.DOCKERHUB_USERNAME }}/workflow-ci-mlflow
 
       - name: Push Docker Image
