--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -83,6 +83,7 @@ jobs:
         run: |
           docker build \
             -f Dockerfile.inference \
+            --model-uri runs:/$(cat latest_run_id.txt)/model \
             -t ${{ secrets.DOCKERHUB_USERNAME }}/workflow-ci-inference .
 
       - name: Push inference image
