--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -44,14 +44,14 @@ jobs:
 
       - name: Save latest RUN_ID
         run: |
-          EXP_ID=$(ls -d mlruns/[0-9]* | head -n 1 | xargs basename)
-          RUN_ID=$(ls -d mlruns/$EXP_ID/*/ \
-            | grep -v meta.yaml \
-            | sed 's:/$::' \
-            | xargs -n1 basename \
-            | head -n 1)
-          echo "$RUN_ID" > mlruns/latest_run_id.txt
+          echo "Listing mlruns content:"
+          ls -R mlruns || echo "mlruns not found"
+
+          EXP_ID=$(ls -d mlruns/* | head -n 1 | xargs basename)
+          RUN_ID=$(ls -td mlruns/$EXP_ID/* | head -n 1 | xargs basename)
+
           echo "Latest RUN_ID=$RUN_ID"
+          echo "$RUN_ID" > mlruns/latest_run_id.txt
 
       - name: Upload MLflow artifacts
         uses: actions/upload-artifact@v4
