--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,14 +2,8 @@ global:
   scrape_interval: 5s
 
 scrape_configs:
-  - job_name: "inference"
+  - job_name: "ml-inference"
+    metrics_path: /metrics
     static_configs:
-      - targets: ["host.docker.internal:8000"]
-
-  - job_name: "system"
-    static_configs:
-      - targets: ["host.docker.internal:9100"]
-
-  - job_name: "prometheus"
-    static_configs:
-      - targets: ["localhost:9090"]
+      - targets:
+          - host.docker.internal:8000
