--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -1,74 +1,71 @@
-name: CI Retrain Model
+name: CI/CD MLflow
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+env:
+  CSV_URL: "MLProject/bank_clean.csv"
+  TARGET_VAR: "Credit_Score"
 
 jobs:
-  train-and-build:
+  build:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        shell: bash -l {0}
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      # Checks-out your repository under $GITHUB_WORKSPACE
+      - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4 
+      # Setup Python 3.12.7
+      - name: Set up Python 3.12.7
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.9"
+          python-version: "3.12.7"
+      
+      # Check Env Variables
+      - name: Check Env
+        run: |
+          echo $CSV_URL
+      # Install mlflow
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install mlflow  
+          
+      # Run as a mlflow project
+      - name: Run mlflow project
+        run: |
+          mlflow run MProject --env-manager=local 
+      
+      # Get latest run_id
+      - name: Get latest MLflow run_id
+        run: |
+          RUN_ID=$(ls -td mlruns/0/*/ | head -n 1 | cut -d'/' -f3)
+          echo "RUN_ID=$RUN_ID" >> $GITHUB_ENV
+          echo "Latest run_id: $RUN_ID"
+          
+      # Build Docker Model
+      - name: Build Docker Model
+        run: |
+          mlflow models build-docker --model-uri "runs:/$RUN_ID/model" --name "cc" 
 
-      - name: Set up Miniconda
-        uses: conda-incubator/setup-miniconda@v3
+      # Login to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
         with:
-          auto-update-conda: true
-          python-version: 3.9
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Verify conda
-        run: conda --version
-
-      - name: Install dependency
+      # Tag the Docker image
+      - name: Tag Docker Image
         run: |
-          pip install mlflow scikit-learn pandas numpy
+          docker tag cc ${{ secrets.DOCKER_HUB_USERNAME }}/cc:latest
 
-      - name: Train model with MLflow
-        env:
-          MLFLOW_TRACKING_URI: file:./mlruns
-          MLFLOW_EXPERIMENT_NAME: bank_marketing_rf
-        run: |
-          mlflow run ./MLProject/MLProject --env-manager=local
-
-      - name: Get RUN_ID from mlruns folder
-        run: |
-          RUN_ID=$(ls -td mlruns/*/* | head -n 1 | awk -F'/' '{print $(NF)}')
-          echo "RUN_ID=$RUN_ID"
-
-      - name: Upload MLflow artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: mlflow-artifacts
-          path: mlruns/
-
-      - name: Debug Docker secrets
-        run: |
-          if [ -z "${{ secrets.DOCKERHUB_TOKEN }}" ]; then
-            echo "TOKEN IS EMPTY"
-            exit 1
-          else
-            echo "TOKEN EXISTS"
-          fi          
-
-      - name: Login to Docker Hub
-        run: |
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login \
-            -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-
-      - name: Build Docker Image with MLflow
-        run: |
-          mlflow models build-docker \
-            --name ${{ secrets.DOCKERHUB_USERNAME }}/workflow-ci-mlflow
-
+      # Push Docker image to Docker Hub
       - name: Push Docker Image
         run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/workflow-ci-mlflow
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/cc:latest
