--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -9,7 +9,7 @@ on:
       - main
 
 env:
-  CSV_URL: "MLProject/bank_clean.csv"
+  CSV_URL: "MLproject/bank_clean.csv"
   TARGET_VAR: "Credit_Score"
 
 jobs:
@@ -39,7 +39,7 @@ jobs:
       # Run as a mlflow project
       - name: Run mlflow project
         run: |
-          mlflow run MProject --env-manager=local 
+          mlflow run MLproject --env-manager=local 
       
       # Get latest run_id
       - name: Get latest MLflow run_id
