--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -37,7 +37,7 @@ jobs:
           MLFLOW_TRACKING_URI: file:./mlruns
           MLFLOW_EXPERIMENT_NAME: bank_marketing_rf
         run: |
-          mlflow run MLProject
+          mlflow run MLProject --env-manager=local
 
       - name: Get RUN_ID from mlruns folder
         run: |
