--- a/.github/workflows/retrain.yaml
+++ b/.github/workflows/retrain.yaml
@@ -37,7 +37,9 @@ jobs:
           MLFLOW_TRACKING_URI: file:./mlruns
           MLFLOW_EXPERIMENT_NAME: bank_marketing_rf
         run: |
-          mlflow run MLProject --env-manager=local
+          mlflow run MLProject \
+            -P n_estimators=200 \
+            -P max_depth=15 \
 
       - name: Get RUN_ID from mlruns folder
         run: |
